preprocess/01_gulf_smooth/slurm-30457720.out
WARNING: Could not find any nv files on this host!
  File "/home/ab10313/submeso_ML/preprocess/01_gulf_smooth/preprocess.py", line 223
    
    ^
SyntaxError: EOF while scanning triple-quoted string literal
